fixed no_go_domains issue by stripping url header with regex

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,6 +46,7 @@ jobs:
       - run: |
           cd docs/source
           make html
+          rm -r html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
